[package]
name = "ecclesiastica_app"
version = "0.1.0"
authors = ["Santo Kalayil"]
edition = "2018"

# -------- below 1 line is used to set icon (binary_icon.ico) for binary exe ---
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1"
rust-embed = "5.9.0"  # to embed image directly to binary without leaving external links
# rust-embed="3.0.0"

# -------- below 2 lines are used to set icon (binary_icon.ico) for binary exe ---
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"  # 0.1.11


# [dependencies.pyo3]
# version = "0.13.2"
# features = ["auto-initialize"]